--- a/index.html
+++ b/index.html
@@ -189,8 +189,8 @@ sob a legislação histórica que proibía atos homossexuais.</p>
 <p><a href="https://en.wikipedia.org/wiki/Turing_completeness">https://en.wikipedia.org/wiki/Turing_completeness</a></p>
 <p><a href="https://www.manchester.ac.uk/discover/news/gordon-brown-issues-apology-for-treatment-of-alan-turing/">https://www.manchester.ac.uk/discover/news/gordon-brown-issues-apology-for-treatment-of-alan-turing/</a></p>
 <p><a href="https://en.wikipedia.org/wiki/John_von_Neumann">https://en.wikipedia.org/wiki/John_von_Neumann</a></p>
-<p><a href="http://www.turing.org.uk/book/"><em>Alan Turing: the Enigma</em></a></p>
-<p><em>[<a href="https://youtu.be/G4MvFT8TGII">https://youtu.be/G4MvFT8TGII</a>]{.ul}</em></p>
-<p><em>[<a href="https://youtu.be/CcU5Kc_FN_4">https://youtu.be/CcU5Kc_FN_4</a>]{.ul}</em></p>
-<p><em>[<a href="https://www.scienceabc.com/innovation/cracking-the-uncrackable-how-did-alan-turing-and-his-team-crack-the-enigma-code.html]{.ul}">https://www.scienceabc.com/innovation/cracking-the-uncrackable-how-did-alan-turing-and-his-team-crack-the-enigma-code.html]{.ul}</a></em></p>
+<p><a href="http://www.turing.org.uk/book/"><em>Alan Turing: the Enigma</a></p>
+<p><a href="https://youtu.be/G4MvFT8TGII">https://youtu.be/G4MvFT8TGII</a></p>
+<p><a href="https://youtu.be/CcU5Kc_FN_4">https://youtu.be/CcU5Kc_FN_4</a></p>
+<p><a href="https://www.scienceabc.com/innovation/cracking-the-uncrackable-how-did-alan-turing-and-his-team-crack-the-enigma-code.html">https://www.scienceabc.com/innovation/cracking-the-uncrackable-how-did-alan-turing-and-his-team-crack-the-enigma-code.html</a></p>
 
