--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <head></head>
 <body>
   <style>
-    p: {
-      position: justify-content;
+    p {
+      justify-content: center;
       font-family: Helvetica, Arial, Sans-Serif;
     };
-    
-    
+
   </style>
   <h1>ALAN TURING</h1>
 
@@ -189,18 +188,18 @@
   lei de 2017 no Reino Unido que perdoou homens advertidos ou condenados
   sob a legislação histórica que proibía atos homossexuais.</p>
   <p>Fontes:</p>
-  <p><a href="https://en.wikipedia.org/wiki/Alan_Turing">https://en.wikipedia.org/wiki/Alan_Turing</a></p>
-  <p><a href="https://en.wikipedia.org/wiki/Entscheidungsproblem">https://en.wikipedia.org/wiki/Entscheidungsproblem</a></p>
-  <p><a href="https://en.wikipedia.org/wiki/Ultra">https://en.wikipedia.org/wiki/Ultra</a></p>
-  <p><a href="https://en.wikipedia.org/wiki/Turing_machine">https://en.wikipedia.org/wiki/Turing_machine</a></p>
-  <p><a href="https://en.wikipedia.org/wiki/Finite-state_machine">https://en.wikipedia.org/wiki/Finite-state_machine</a></p>
-  <p><a href="https://www.cia.gov/stories/story/the-enigma-of-alan-turing/">https://www.cia.gov/stories/story/the-enigma-of-alan-turing/</a></p>
-  <p><a href="https://www.turing.org.uk/publications/dnb.html">https://www.turing.org.uk/publications/dnb.html</a></p>
-  <p><a href="https://en.wikipedia.org/wiki/Turing_completeness">https://en.wikipedia.org/wiki/Turing_completeness</a></p>
-  <p><a href="https://www.manchester.ac.uk/discover/news/gordon-brown-issues-apology-for-treatment-of-alan-turing/">https://www.manchester.ac.uk/discover/news/gordon-brown-issues-apology-for-treatment-of-alan-turing/</a></p>
-  <p><a href="https://en.wikipedia.org/wiki/John_von_Neumann">https://en.wikipedia.org/wiki/John_von_Neumann</a></p>
-  <p><a href="http://www.turing.org.uk/book/"><em>Alan Turing: the Enigma</a></p>
-  <p><a href="https://youtu.be/G4MvFT8TGII">https://youtu.be/G4MvFT8TGII</a></p>
-  <p><a href="https://youtu.be/CcU5Kc_FN_4">https://youtu.be/CcU5Kc_FN_4</a></p>
-  <p><a href="https://www.scienceabc.com/innovation/cracking-the-uncrackable-how-did-alan-turing-and-his-team-crack-the-enigma-code.html">https://www.scienceabc.com/innovation/cracking-the-uncrackable-how-did-alan-turing-and-his-team-crack-the-enigma-code.html</a></p>
+  <a href="https://en.wikipedia.org/wiki/Alan_Turing">https://en.wikipedia.org/wiki/Alan_Turing</a>
+  <a href="https://en.wikipedia.org/wiki/Entscheidungsproblem">https://en.wikipedia.org/wiki/Entscheidungsproblem</a>
+  <a href="https://en.wikipedia.org/wiki/Ultra">https://en.wikipedia.org/wiki/Ultra</a>
+  <a href="https://en.wikipedia.org/wiki/Turing_machine">https://en.wikipedia.org/wiki/Turing_machine</a>
+  <a href="https://en.wikipedia.org/wiki/Finite-state_machine">https://en.wikipedia.org/wiki/Finite-state_machine</a>
+  <a href="https://www.cia.gov/stories/story/the-enigma-of-alan-turing/">https://www.cia.gov/stories/story/the-enigma-of-alan-turing/</a>
+  <a href="https://www.turing.org.uk/publications/dnb.html">https://www.turing.org.uk/publications/dnb.html</a>
+  <a href="https://en.wikipedia.org/wiki/Turing_completeness">https://en.wikipedia.org/wiki/Turing_completeness</a>
+  <a href="https://www.manchester.ac.uk/discover/news/gordon-brown-issues-apology-for-treatment-of-alan-turing/">https://www.manchester.ac.uk/discover/news/gordon-brown-issues-apology-for-treatment-of-alan-turing/</a>
+  <a href="https://en.wikipedia.org/wiki/John_von_Neumann">https://en.wikipedia.org/wiki/John_von_Neumann</a>
+  <a href="http://www.turing.org.uk/book/"><em>Alan Turing: the Enigma</a>
+  <a href="https://youtu.be/G4MvFT8TGII">https://youtu.be/G4MvFT8TGII</a>
+  <a href="https://youtu.be/CcU5Kc_FN_4">https://youtu.be/CcU5Kc_FN_4</a>
+  <a href="https://www.scienceabc.com/innovation/cracking-the-uncrackable-how-did-alan-turing-and-his-team-crack-the-enigma-code.html">https://www.scienceabc.com/innovation/cracking-the-uncrackable-how-did-alan-turing-and-his-team-crack-the-enigma-code.html</a>
 </body>
