Update CSS and fix (dumb) errors

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <head></head>
 <body>
   <style>
-    p {
-      justify-content: center;
-      font-family: Helvetica, Arial, Sans-Serif;
+    body {
+        text-align: center;
+        font-family: Helvetica, Arial, Sans-Serif;
     };
 
   </style>
