Update CSS and fix (dumb) errors

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <style>
     body {
         font-family: Helvetica, Arial, Sans-Serif;
+        margin: 0px;
+        padding: 2em 3.5em;
     }
 
     h1 {
