Update CSS and fix (dumb) errors

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <body>
   <style>
     body {
+        font-size: larger;
         font-family: Helvetica, Arial, Sans-Serif;
         margin: 0px;
-        padding: 2em 3.5em;
+        padding: 2em 10em;
     }
 
     h1 {
