--- a/index.html
+++ b/index.html
@@ -23,10 +23,22 @@
             background-color: #CCC;
             border-radius: 8px;
         }
-    </style>
-    <div id="text">
-        <h1>ALAN TURING</h1>
 
+        #title {
+            color: #222;
+            padding: 1px 0px;
+            background-color: #00F5;
+            text-align: center;
+        }
+    </style>
+
+    <header>
+        <div id="title">
+            <h1>Alan Turing</h1>
+        </div>
+    </header>
+
+    <div id="text">
         <p>Alan Mathison Turing foi um gênio, matemático, cientista da computação,
             lógico, criptoanalista, filósofo e biólogo teórico.</p>
         <p>Turing teve muita influência no desenvolvimento da teoria da computação,
